Updated contact page

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/nbproject/private/
-/versions/
-/nbproject/
 commenttest.php
+/css/test.css
+/img/
+/nbproject/
+/nbproject/private/
+test.php
+/versions/
+
+
